adding server scripts

--- a/scripts/nginx.conf
+++ b/scripts/nginx.conf
@@ -1,12 +1,11 @@
-server { return 404; }
 upstream django {
-  server 127.0.0.1:3033;
+  server 127.0.0.1:3031;
 }
 
 server {
   listen      80;
   root /home/django/modifi3d/;
-  server_name *;
+  server_name modifi3d.lablackey.com;
 
   access_log  /var/log/nginx/modifi3d-live_access.log;
   error_log   /var/log/nginx/modifi3d-live_error.log;
